# esdp_fitness_project

./: .gitignore  docker-compose.yml
source/: Dockerfile  pyproject.toml  setup.cfg
source/accounts/: urls.py
source/accounts/templates/: login.html
source/api_v1/: serializers.py  urls.py
source/api_v1/tests/: __init__.py  cache_api_tests.py  client_api_tests.py  group_api_tests.py  trainings_api_tests.py
source/api_v1/views/: __init__.py  cache_api_views.py  client_api_views.py  group_api_views.py  trainings_api_views.py
source/main/: settings.py  urls.py
source/webapp/: abstract_models.py  admin.py  factory.py  filters.py  forms.py  manager.py  models.py  urls.py
source/webapp/docks/: ModelSchema.drawio.xml
source/webapp/migrations/: 0001_initial.py  0002_remove_client_is_active.py  0003_payment.py  0004_remove_client_payment_at_client_payment_end_date_and_more.py  0005_group.py  0006_training.py  0007_coach.py  0008_client_coach_client_comment_client_group_and_more.py  0009_remove_coach_group_group_coach.py  0010_remove_client_coach.py  0011_remove_coach_salary_remove_coach_salary_date.py  0012_coachtraining.py  0013_training_group.py  0014_group_is_active.py  0015_client_is_active.py  0016_payment_created_at_payment_updated_at.py  0016_rename_coachtraining_grouptraining.py  0017_merge_20230331_0833.py  0018_client_photo_coach_photo.py  0019_alter_group_coach_alter_grouptraining_coach_and_more.py  0020_alter_client_group.py  0021_alter_coach_first_name.py
tg_bot/: Dockerfile  fsm.py  keyboards.py  main.py  pyproject.toml  validators.py
(+46 files in other folders)
